// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Other should be ok with empty line wiki 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Other should begin with hardBreak if it begins with a new line 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Other should process second empty line as a new paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
